fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,8 @@ li{
     
     width: device-width; /* Full width */
     height: 700px; /* Full height */
-    overflow-y: auto; /* Enable scroll if needed */
+    overflow-y: auto;
+    overflow-x: auto; /* Enable scroll if needed */
    /* background-color: rgb(0,0,0); /* Fallback color */
     /* background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     
